// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth form renders login page 1`] = `
<div>
  <h1
    class="text-dark font-semibold font-cursive text-4xl bg-olive bg-opacity-20 w-full p-5 rounded-md text-center"
  >
    <span
      class="text-teal"
    >
      friends
    </span>
    .
    <span
      class="text-orange"
    >
      map
    </span>
    (🗺️)
  </h1>
  <div
    class="flex flex-col text-center items-center justify-evenly text-xl p-5 h-full"
  >
    <p
      class="text-3xl font-semibold"
    >
      Create an account
    </p>
    <hr
      class="w-1/2 h-1 bg-dark opacity-30 border-1 rounded-md"
    />
    <form
      class="flex flex-col items-center w-3/4 space-y-5"
    >
      <input
        aria-label="email"
        class="p-2 rounded-md"
        placeholder="email"
        type="email"
        value=""
      />
      <input
        aria-label="password"
        class="p-2 rounded-md"
        placeholder="password"
        type="password"
        value=""
      />
      <button
        class="bg-teal text-white w-1/2 p-2 rounded-md"
      >
        Register
      </button>
    </form>
    <p>
      Already have an account?
       
      <a
        class="font-semibold block"
        href="/login"
      >
        Log In
      </a>
    </p>
    <div
      class="flex flex-col items-center spatext-xl bg-white ring-tint bg-opacity-70 p-5 rounded-md"
    >
      <p
        class="font-semibold"
      >
        About
      </p>
      <hr
        class="w-1/2 h-1 bg-dark opacity-30 border-1 rounded-md"
      />
      <p>
        <span
          class="font-semibold"
        >
          friends.map(🗺️)
        </span>
         is a convenient travel companion that helps to keep you and your groups safe and organized in unfamiliar places while protecting your privacy.
      </p>
    </div>
    <div
      class="h-1/6"
    />
  </div>
</div>
`;

exports[`auth form renders register page 1`] = `
<div>
  <h1
    class="text-dark font-semibold font-cursive text-4xl bg-olive bg-opacity-20 w-full p-5 rounded-md text-center"
  >
    <span
      class="text-teal"
    >
      friends
    </span>
    .
    <span
      class="text-orange"
    >
      map
    </span>
    (🗺️)
  </h1>
  <div
    class="flex flex-col text-center items-center justify-evenly text-xl p-5 h-full"
  >
    <p
      class="text-3xl font-semibold"
    >
      Welcome back!
    </p>
    <hr
      class="w-1/2 h-1 bg-dark opacity-30 border-1 rounded-md"
    />
    <form
      class="flex flex-col items-center w-3/4 space-y-5"
    >
      <input
        aria-label="email"
        class="p-2 rounded-md"
        placeholder="email"
        type="email"
        value=""
      />
      <input
        aria-label="password"
        class="p-2 rounded-md"
        placeholder="password"
        type="password"
        value=""
      />
      <button
        class="bg-teal text-white w-1/2 p-2 rounded-md"
      >
        Log In
      </button>
    </form>
    <p>
      Need to make an account?
       
      <a
        class="font-semibold block"
        href="/register"
      >
        Register
      </a>
    </p>
    <div
      class="flex flex-col items-center spatext-xl bg-white ring-tint bg-opacity-70 p-5 rounded-md"
    >
      <p
        class="font-semibold"
      >
        About
      </p>
      <hr
        class="w-1/2 h-1 bg-dark opacity-30 border-1 rounded-md"
      />
      <p>
        <span
          class="font-semibold"
        >
          friends.map(🗺️)
        </span>
         is a convenient travel companion that helps to keep you and your groups safe and organized in unfamiliar places while protecting your privacy.
      </p>
    </div>
    <div
      class="h-1/6"
    />
  </div>
</div>
`;
